# haskell-invokes-rust

./: .gitignore  LICENSE  Main.hs  Makefile  README.md  main.c  sample.cabal
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
